--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dlx-ui": "^1.0.1",
     "element-plus": "^2.9.3",
     "vitepress": "^1.5.0",
     "vue": "^3.5.13"
